attempt to fix reponsiveness problems with navigation, header, and footer on mobile

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -33,7 +33,7 @@ header {
   }
 
   @include media($mobile) {
-    @include span-columns(3 of 4);
+    @include span-columns(2.5 of 4);
   }
 }
 .header__right {
@@ -47,6 +47,6 @@ header {
   }
 
   @include media($mobile) {
-    @include span-columns(0.5 of 4);
+    @include span-columns(1 of 4);
   }
 }
