--- a/app/assets/stylesheets/components/_mixins.scss
+++ b/app/assets/stylesheets/components/_mixins.scss
@@ -74,7 +74,7 @@
   margin-bottom: $tiny-spacing;
   &:before {
     position: absolute;
-    top: 0;
+    top: 0px;
     left: 0;
     font-family: 'FontAwesome';
     content: $icon;
